fix(auth): certification logic is inconsistent
